Fix CSS. Espacio con Scrollbar. Long Words.

--- a/client/src/modules/ComponenteChats/components/ChatSection/ChatSection.css
+++ b/client/src/modules/ComponenteChats/components/ChatSection/ChatSection.css
@@ -1,26 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Pacifico');
 
-body {
+:local(body) {
     margin: 0;
 }
 
-p {
+:local(p) {
     margin: 0;
     display: inline-block;
 }
 
-.Chatroom {
+:local(.Chatroom) {
     width: 720px;
-    height: 740px;
+    height: 760px;
     background-color: rgba(0,0,0, .7);
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 0 8px 0 rgba(0,0,0, 0.3);
 }
 
-.Chatroom h3 {
+:local(.Chatroom h3) {
     font-family: 'Pacifico', cursive;
-    background-color: orange;
+    background-color: #e86d26;
     color: #FFF;
     margin: 0;
     height: 40px;
@@ -30,10 +30,15 @@ p {
     justify-content: center;
 }
 
-.Chatroom ul {
+:local(.Chatroom ul) {
     box-sizing: border-box;
     padding: 0 20px;
-    margin: 10px 0 0;
+    margin: 10px 100px 100px;
     height: 510px;
     overflow-y: scroll;
+}
+
+.ui.list {
+    padding: 30px !important;
+    word-break: break-word;      /* IE */
 }
